--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="author" content="Jesse,JesseZhu,朱星杰">
+    <meta name="description" content="蝙蝠洞，一个资源分享网站">
+    <meta name="keywords" content="BatCave,蝙蝠洞,资源,Jesse,JesseZhu,朱星杰">
+    <meta name="robots" content="all">
     <title>BatCave</title>
     <link rel="icon" href="./static/favicon.ico">
     <!-- Bootstrap CSS -->
