--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
     <link rel="icon" href="./static/favicon.ico">
     <!-- Bootstrap CSS -->
     <link href="/static/bootstrap-3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <script>
+      function calc() {
+        let html = document.documentElement
+        let width =html.clientWidth
+        width=width>768?768:width
+        html.style.fontSize = 20 * (width / 768) + "px"
+      }
+      window.addEventListener("resize", calc)
+      calc()
+    </script>
   </head>
   <body>
     <div id="app"></div>
