--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
       window.addEventListener("resize", calc)
       calc()
     </script>
+    <script>
+      var _wa= _wa || [ ];
+      _wa.push(['config', 'WA-PEEIE2MMEV-1']);
+      (function() {
+        var newScript = document.createElement('script');
+        newScript.async = true;
+        newScript.src = 'http://analytics.server.jessezhu.cn/resources/javascripts/wa.js';
+        var firstScript = document.getElementsByTagName('script')[0];
+        firstScript.parentNode.insertBefore(newScript, firstScript);
+      })();
+    </script>
   </head>
   <body>
     <div id="app"></div>
