--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
       window.addEventListener("resize", calc)
       calc()
     </script>
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+            var hm = document.createElement("script");
+            hm.src = "https://hm.baidu.com/hm.js?5dfad48d35f029e63d9880b7a8634b69";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
   </head>
   <body>
     <div id="app"></div>
